--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   font_awesome_flutter: ^10.12.0
   get: ^4.7.3
+  get_it: ^9.2.0
   go_router: ^17.0.1
   google_fonts: ^6.3.3
 
