--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,9 +78,10 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: GT Sectra Fine
+    - family: GTSectraFine
       fonts:
         - asset: assets/fonts/GT-Sectra-Fine-Regular.ttf
+          weight: 400
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
